--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
-MONGO_URI=mongodb+srv://mohammed-yt:6c%21R%25UxN88zLKaQ@baghub.srxjlch.mongodb.net/baghub
+MONGO_URI=mongodb+srv://mohammed-yt:6c!R%25UxN88zLKaQ@baghub.srxjlch.mongodb.net/baghub?retryWrites=true&w=majority
 PORT=5000
+ 
